infrastructure/k8s/auth-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-service
  labels:
    name: auth-service
    environment: dev
